Added few features

--- a/prompt/index.html
+++ b/prompt/index.html
@@ -25,10 +25,9 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container">
           <a href="#" class="navbrand-brand mb-0 h2">
-            <img class="d-inline-block align-top"
-              src="./images/mainlogo.png"
-              width=30" height="30" />
-              Prompt
+            <img class="d-inline-block align-top"src="./images/mainlogo.png"  alt="logo"
+            width="40" height="40">
+              Prompt<br> <span class="ps-5 small">Enterprise</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
@@ -209,8 +208,14 @@
   <footer class="container">
     <div class="row mt-5">
       <div class="col-2">
-        <div>
-          <p></p>
+        <div class="navbrand-brand mb-0 p">
+          <a href="#">
+            <img class="d-inline-block align-top"src="./images/mainlogo.png"  alt="logo"
+            width="30" height="30">
+          </a>
+          <a href="#">
+            <h2>Prompt</h2>
+          </a>
         </div>
       </div>
       <div class="col-2">
@@ -238,7 +243,15 @@
         </div>
       </div>
       <div class="col-4">
-        <div>Boy</div>
+        <div>
+          <h4>Newsletter Signup</h4>
+          <p>Read the latest news and updates about Prompt and the print industry</p>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
