--- a/prompt/index.html
+++ b/prompt/index.html
@@ -211,10 +211,7 @@
         <div class="navbrand-brand mb-0 p">
           <a href="#">
             <img class="d-inline-block align-top"src="./images/mainlogo.png"  alt="logo"
-            width="30" height="30">
-          </a>
-          <a href="#">
-            <h2>Prompt</h2>
+            width="30" height="30"> Prompt
           </a>
         </div>
       </div>
